correct scroll behaviour on mobile devices

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -29,6 +29,7 @@
   letter-spacing: 1px;
   line-height: 3;
   padding-bottom: 2.5px;
+  cursor: pointer;
 }
 /*
 .vertical-menu .link-animation:hover {
@@ -252,11 +253,11 @@ box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   text-align: left;
 }
 
-#projects .card-header {
+#projects-section .card-header {
   height: 50px;
 }
 
-#skills .card-header {
+#skills-section .card-header {
   height: auto;
   padding-top: 25px;
 }
@@ -387,7 +388,7 @@ box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 
 @media (hover: hover) {
   .vertical-menu .link-animation:hover {
-   color: #4287f5;
+   color: #4287f5 !important;
    border-color: #4287f5;
  }
  .vertical-menu #close-btn:hover {
